# sonar

./: .gitignore  ESP32_PERIPHERAL_CONNECTIONS.md  LICENSE.md  README.md
CAD/: Housing-Body.step  Housing-LefeetSonarMount.step  Housing-Sideplate.step  Housing-Sonar Mount.step  Housing.FCStd
EDA/: Library.kicad_sym  SonarMK2.kicad_pcb  SonarMK2.kicad_pro  SonarMK2.kicad_sch  SonarMK2.step  sym-lib-table
EDA/Library.pretty/: Buzzer_15x7.5RM7.6.kicad_mod  C_0402_1005Metric.kicad_mod  C_0805_2012Metric.kicad_mod  D_SMA.kicad_mod  ESP32-WROOM-32.kicad_mod  Fuseholder_Littelfuse_Nano2_154x.kicad_mod  IDC-Header_2x07_P2.54mm_Vertical.kicad_mod  IDC-Header_2x08_P2.54mm_Vertical.kicad_mod  LED_0805_2012Metric.kicad_mod  LGA-12_2x2mm_P0.5mm.kicad_mod  L_SunItech_SLO0530H.kicad_mod  L_Sunlord_SWPA4026S.kicad_mod  MountingHole_3.2mm_M3_Pad.kicad_mod  MountingHole_3.5mm.kicad_mod  PinHeader_1x02_P2.54mm_Horizontal.kicad_mod  PinHeader_1x02_P2.54mm_Vertical.kicad_mod  PinHeader_1x03_P2.54mm_Horizontal.kicad_mod  QFN-28-1EP_5x5mm_P0.5mm_EP3.35x3.35mm.kicad_mod  R_0402_1005Metric.kicad_mod  R_0805_2012Metric.kicad_mod  R_2512_6332Metric.kicad_mod  SO-20-1EP_7.52x12.825mm_P1.27mm_EP6.045x12.09mm_Mask3.56x4.47mm_ThermalVias.kicad_mod  SOIC127P1420X360-20N.kicad_mod  SOT-23.kicad_mod  SW_SPST_EVQPE1.kicad_mod  SolderJumper-2_P1.3mm_Bridged_Pad1.0x1.5mm.kicad_mod  (+9 more)
Firmware/: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
Firmware/components/web_server/: CMakeLists.txt  web_server.c
Firmware/components/web_server/include/: web_server.h
(+71 files in other folders)
